Fixed python 3 compability.

--- a/templates/ansible.cfg.j2
+++ b/templates/ansible.cfg.j2
@@ -20,7 +20,7 @@
 [{{ name }}]
 
 {% for option in ns.options %}
-{{ option.keys()[0] }} = {{ option.values()[0] }}
+{{ (option.keys() | list)[0] }} = {{ (option.values() | list)[0] }}
 {% endfor %}
 {%- endif %}
 {%- endmacro %}
