Changed section of pipelining option.
Moved testing engine to podman.

--- a/templates/ansible.cfg.j2
+++ b/templates/ansible.cfg.j2
@@ -28,6 +28,7 @@
 {{ section("defaults") }}
 {{- section("inventory") }}
 {{- section("privilege") }}
+{{- section("connection") }}
 {{- section("paramiko") }}
 {{- section("ssh_connection") }}
 {{- section("persistent") }}
